--- a/store/templates/store/category_detail.html
+++ b/store/templates/store/category_detail.html
@@ -1,11 +1,11 @@
 {% extends 'core/base.html' %}
 
-{% block title %}
-    Welcome
-{% endblock%}
+{% block title %}{{category.title}}{% endblock%}
 
 {% block content %}
-    <div class="flex flex-wrap">
+    <h2 class="text-xl">{{category.title}}</h2>
+
+        <div class="flex flex-wrap">
         {% for product in products %}
             <div class="product w-1/3 p-2 ">    
                 <div class="bg-gray-200">
@@ -17,4 +17,5 @@
             </div>
         {% endfor %}
     </div>
+   
 {% endblock %}
