--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -6,9 +6,14 @@
 
 {% block content %}
     <h2 class="text-xl">{{product.title}}</h2>
-    <p class="text-xs text-gray-500">{{produc.get_display_price}}</p>
+    <p class="text-xs text-gray-500">
+        ${{product.get_display_price}}
+        -
+        {%firstof product.user.get_full_name product.user.username %}
+
+    </p>
 
     {% if product.description %}
-        <p class="text-sm text-gray-500">product.description</p>
+        <p class="text-sm text-gray-500">{{product.description}}</p>
     {% endif %}
 {% endblock %}
