--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -5,11 +5,17 @@
 {% endblock%}
 
 {% block content %}
+    {% if product.image %}
+        <div class="image mb-4">
+            <img src="{{product.image.url}}" alt="Image of{{product.title}}">
+        </div>
+    {% endif %}
+    
     <h2 class="text-xl">{{product.title}}</h2>
     <p class="text-xs text-gray-500">
         ${{product.get_display_price}}
         -
-        {%firstof product.user.get_full_name product.user.username %}
+        <a href="{% url 'vendor_detail' product.user.id %}">{%firstof product.user.get_full_name product.user.username %}</a>
 
     </p>
 
