--- a/store/templates/store/search.html
+++ b/store/templates/store/search.html
@@ -3,8 +3,10 @@
 {% block title %}{{category.title}}{% endblock%}
 
 {% block content %}
-    <h2 class="text-xl">{{category.title}}</h2>
-
+    <h2 class="text-xl">Search</h2>
+        <h2 class="text-xl text-gray-600">Search results for "{{query}}" : </h2>
+    
+        {% if products %}
         <div class="flex flex-wrap">
         {% for product in products %}
             <div class="product w-1/3 p-2 ">    
@@ -23,5 +25,9 @@
             </div>
         {% endfor %}
     </div>
+    {% else %}
+        <p>There are no products matching this query!!</p>
+
+    {% endif%}
    
 {% endblock %}
