--- a/userprofile/templates/userprofile/vendor_detail.html
+++ b/userprofile/templates/userprofile/vendor_detail.html
@@ -1,18 +1,19 @@
 {% extends 'core/base.html' %}
 
-{% block title %}{{category.title}}{% endblock%}
+{%block title%}{% firstof user.get_full_name user.username %}{% endblock %}
 
-{% block content %}
-    <h2 class="text-xl">{{category.title}}</h2>
 
-        <div class="flex flex-wrap">
-        {% for product in products %}
+{%block content%}
+    <h3 class="text-2xl">{% firstof user.get_full_name user.username %}</h3>
+     <div class="flex flex-wrap">
+        {% for product in user.products.all %}
             <div class="product w-1/3 p-2 ">    
-                <div class="bg-gray-200">
-                    <a href="{% url 'product_detail' product.category.slug  product.slug %}">
+                <div class="bg-gray-100">
+                    <a href="{% url 'product_detail' product.category.slug product.slug %}">
                         {%if product.image %}
                             <div class="image mb-2">
-                                <img src="{{product.image.url}}" alt="Image of {{product.title}}">                
+                                <img src="{{product.image.url}}" alt="Image of {{product.title}}">
+                                        
                             </div>
                         {% endif %}
                         
@@ -23,5 +24,4 @@
             </div>
         {% endfor %}
     </div>
-   
 {% endblock %}
