--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -14,6 +14,10 @@
             <a href="/" class="text-2xl">PetNet</a>
         </div>
 
+        <div class="owner">
+        <p class="text-white">Hello: {%firstof request.user.username request.user.get_full_name %}</p>
+        </div>
+
         <div class="search">
             <form method="get" action="/search/">
                 <input type="search" name="query" placeholder="Search..." />
@@ -28,6 +32,11 @@
 
             {% if request.user.is_authenticated %}
                 <a href=" {% url 'myaccount' %}" class="text-white">My account</a>
+                <a href="{% url 'my_store'%}" class="text-white"> My store</a>
+                <a href="{% url 'logout'%}" class="text-white"> Logout</a>
+
+            {% else %}
+                <a href="{% url 'login'%}" class="text-white"> Logoin</a>
             {% endif %}
             
         </div>
