--- a/store/templates/store/category_detail.html
+++ b/store/templates/store/category_detail.html
@@ -3,25 +3,6 @@
 {% block title %}{{category.title}}{% endblock%}
 
 {% block content %}
-    <h2 class="text-xl">{{category.title}}</h2>
-
-        <div class="flex flex-wrap">
-        {% for product in products %}
-            <div class="product w-1/3 p-2 ">    
-                <div class="bg-gray-200">
-                    <a href="{% url 'product_detail' product.category.slug  product.slug %}">
-                        {%if product.image %}
-                            <div class="image mb-2">
-                                <img src="{{product.image.url}}" alt="Image of {{product.title}}">                
-                            </div>
-                        {% endif %}
-                        
-                        <h2 class="text-xl">{{product.title}}</h2>
-                        <h3 class="text-xl text-gray-600">${{product.get_display_price}}</h3>
-                    </a>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
+    {% include 'core/list_product.html'%}
    
 {% endblock %}
