--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -22,4 +22,6 @@
     {% if product.description %}
         <p class="text-sm text-gray-500">{{product.description}}</p>
     {% endif %}
+
+    <a href="{% url 'add_to_cart' product.id %}" class="mt-2 inline-block py-2 px-4 bg-teal-500 text-white">Add to cart</a>
 {% endblock %}
