--- a/store/templates/store/search.html
+++ b/store/templates/store/search.html
@@ -6,25 +6,8 @@
     <h2 class="text-xl">Search</h2>
         <h2 class="text-xl text-gray-600">Search results for "{{query}}" : </h2>
     
-        {% if products %}
-        <div class="flex flex-wrap">
-        {% for product in products %}
-            <div class="product w-1/3 p-2 ">    
-                <div class="bg-gray-200">
-                    <a href="{% url 'product_detail' product.category.slug  product.slug %}">
-                        {%if product.image %}
-                            <div class="image mb-2">
-                                <img src="{{product.image.url}}" alt="Image of {{product.title}}">                
-                            </div>
-                        {% endif %}
-                        
-                        <h2 class="text-xl">{{product.title}}</h2>
-                        <h3 class="text-xl text-gray-600">${{product.get_display_price}}</h3>
-                    </a>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
+    {% if products %}
+        {% include 'core/list_product.html'%}
     {% else %}
         <p>There are no products matching this query!!</p>
 
