--- a/userprofile/templates/userprofile/vendor_detail.html
+++ b/userprofile/templates/userprofile/vendor_detail.html
@@ -6,7 +6,7 @@
 {%block content%}
     <h3 class="text-2xl">{% firstof user.get_full_name user.username %}</h3>
      <div class="flex flex-wrap">
-        {% for product in user.products.all %}
+        {% for product in products %}
             <div class="product w-1/3 p-2 ">    
                 <div class="bg-gray-100">
                     <a href="{% url 'product_detail' product.category.slug product.slug %}">
