--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -26,14 +26,23 @@
 
         </div>
 
-        <div class="menu flex space-x-4">
+        <div class="menu flex space-x-4 flex items-center">
             {% menu%}
+            <a href=" {% url 'cart_view' %}" class=" flex space-x-3 py-2 px-4 bg-teal-600 text-white rounded-xl hover:bg-teal-900">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                  </svg><span>({{cart|length}})</span>
+            </a>
             
 
             {% if request.user.is_authenticated %}
-                <a href=" {% url 'myaccount' %}" class="text-white">My account</a>
-                <a href="{% url 'my_store'%}" class="text-white"> My store</a>
+                <a href=" {% url 'myaccount' %}" class="py-2 px-4 bg-teal-600 text-white rounded-xl hover:bg-teal-900">My account</a>
                 <a href="{% url 'logout'%}" class="text-white"> Logout</a>
+                
+                {% if request.user.userprofile.is_vendor %}
+                    <a href="{% url 'my_store'%}" class="text-white"> My store</a>
+                {% endif%}
+                
 
             {% else %}
                 <a href="{% url 'login'%}" class="text-white"> Logoin</a>
@@ -47,5 +56,8 @@
     {% block content %}
     {% endblock %}
     </div>
+
+    {% block scripts %}
+    {% endblock %}
 </body>
 </html>
