--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -23,6 +23,7 @@
         let data = {
             'first_name' : document.getElementById('id_first_name').value,
             'last_name' : document.getElementById('id_last_name').value,
+            'email' : document.getElementById('id_email').value,
             'address' : document.getElementById('id_address').value,
             'zipcode' : document.getElementById('id_zipcode').value,
             'city' : document.getElementById('id_city').value,
