--- a/equipment/templates/equipment/ListCalibrationRecord.html
+++ b/equipment/templates/equipment/ListCalibrationRecord.html
@@ -4,7 +4,7 @@
 
 
     <div class=clsAddCalibrationRecord>
-        <a href="{%url 'AddCalibrationRecord' %}">Add record</a><br><br>
+        <a href="{%url 'AddCalibrationRecord' %}">Add Calibration Record</a><br><br>
     </div>
 
 <div>
