--- a/core/templates/core/navbar_equipment.html
+++ b/core/templates/core/navbar_equipment.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item" active>
-                <a class="nav-link" href="{%url 'ListCalibrationRecord'%}">List Cal Record</a>
+                <a class="nav-link" href="{%url 'ListCalibrationRecord'%}">Calibration Record</a>
 
             </li>
 
